fix:correction overflow et debut d'organisation du scss

--- a/Composants/bouton-rose.scss
+++ b/Composants/bouton-rose.scss
@@ -5,11 +5,12 @@
     border-radius: 25px;
     width: fit-content;
     align-self: center;
+    box-shadow: 1px 1px 3px rgb(184, 184, 184);;
     p {
         padding: 15px;
         margin: 0;
         color: #EAEAEA;
     }
-    :hover{box-shadow: 1px 1px 3px rgb(184, 184, 184);
+    :hover{box-shadow: 3px 3px 8px rgb(184, 184, 184);
         border-radius: 25px;}
 }
