--- a/Pages/style-page-aceuille.scss
+++ b/Pages/style-page-aceuille.scss
@@ -5,21 +5,30 @@ html {
     a {
         text-decoration: none;
         color: black;
+       
+     
     }
+    h3 {
+    margin: 0;
+    padding: 0;
+}
 }
 .logo {
     width: 100%;
-    display: flex;
-    justify-content: center;
+    display: grid;
+
     align-items: center;
 
-    i {
+    .fa-arrow-left {
         float: left;
+        margin-left: 24px;
+        
     }
 
     img {
         width: 162px;
         padding: 20px 0px 20px 0px;
+        justify-self: center;
     }
 }
 
